# gold-price-predictor

./: .env.example  .gitignore  DATASET.py  GOLD_prices_2010_to_today.csv  README.md  app.py  gold_price_model.pkl  pyproject.toml  requirements.txt  wsgi.py
scripts/: update_gold_dataset.py
src/gold_price_predictor/: app_factory.py  config.py
src/gold_price_predictor/constants/: __init__.py
src/gold_price_predictor/services/: currency_service.py  gold_price_service.py
src/gold_price_predictor/utils/: plotting.py
templates/: index_dashboard.html
