[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gold-price-predictor"
version = "0.1.0"
description = "Flask dashboard for gold price prediction and INR conversion."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.0.0",
    "matplotlib>=3.8.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "requests>=2.31.0",
    "scikit-learn>=1.5.0",
    "werkzeug>=3.0.0",
    "yfinance>=0.2.54",
]

[tool.hatch.build.targets.wheel]
packages = ["src/gold_price_predictor"]

[tool.uv]
dev-dependencies = []
